--- a/websites/category/view/edit.html
+++ b/websites/category/view/edit.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="utf-8">
     <!-- put jquery before angularjs -->
-    <script src="/node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script> 
-    <script src="/node_modules/angular/angular.min.js" type="text/javascript"></script>
-    <!-- Bootstrap -->
-    <script src="/node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script> 
+    <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
     <!-- tree -->
-    <script type="text/javascript" src="/node_modules/angular-tree-control/angular-tree-control.js"></script>
-    <script type="text/javascript" src="/node_modules/angular-tree-control/context-menu.js"></script>
+    <script type="text/javascript" src="/bower_components/angular-tree-control/angular-tree-control.js"></script>
+    <!-- Bootstrap -->
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript"></script>
 
     <!-- Custom Declaration -->
     <title>目录编辑</title>
