--- a/websites/document/view/edit.html
+++ b/websites/document/view/edit.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="/node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script> 
-    <script src="/node_modules/angular/angular.min.js" type="text/javascript"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script> 
+    <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
     <!-- Bootstrap -->
-    <script src="/node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript"></script>
     <!-- editor.md -->
     <link rel="stylesheet" href="/node_modules/editor.md/css/editormd.css" />    
     <script type="text/javascript" src="/node_modules/editor.md/editormd.js"></script>
