autosar可以添加文档信息了

--- a/framework/view/header.html
+++ b/framework/view/header.html
@@ -34,6 +34,7 @@ const menu_data = [
     ]},
     {'name':'AUTOSAR', 'url':'#', 'children':[
         {'name':'Standards', 'url':'/autosar/view/index.html'},
+        {'name':'Documents', 'url':'/autosar/view/document.html'},
     ]},
     {'name':'System', 'url':'/view/backup.html', 'children':[
         {'name':'Export Documents', 'url':'/view/export.html'},
