--- a/websites/autosar/view/css/all.css
+++ b/websites/autosar/view/css/all.css
@@ -4,7 +4,7 @@
 .list { height: 605px; }
 .list>div { height: 24px; line-height: 24px; }
 .list>.header { background-color: #cccccc; text-align: center; }
-.list>.item { border-bottom: 1px dashed #cccccc; }
+.list>.item { border-bottom: 1px dashed #cccccc; cursor: pointer; }
 .list>div>div { display: inline; float: left; }
 
 .title { width: calc(100% - 250px); }
