添加autosar的glossary功能

--- a/websites/autosar/view/css/all.css
+++ b/websites/autosar/view/css/all.css
@@ -1,3 +1,5 @@
+.id_info { line-height: 30px; font-weight: bold; font-style: italic; }
+
 /* document */
 #intro_editor { border: 1px dashed #888888; padding: 5px; min-height: 450px; border-radius: 5px; }
 
@@ -12,3 +14,9 @@
 .status { width: 50px; text-align: center; }
 .part_of_standard { width: 100px; text-align: center; }
 .part_of_release { width: 50px; text-align: center; }
+
+/* glossary */
+.glossary_item { height: 100px; padding: 5px; border: 1px dashed #888888; border-radius: 5px; }
+.definition { height: 250px; }
+.glossary_list { height: 545px; border: 1px dashed #888888; border-radius: 5px; }
+.glossary_list>div { display: inline; float: left; padding: 0px 5px; border-bottom: 1px solid #cccccc; cursor: pointer; }
