--- a/websites/autosar/view/document.html
+++ b/websites/autosar/view/document.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-7 mt-3">
                 <div class="row">
-                    <div class="col list">
+                    <div class="col document_list">
                         <div class="header">
                             <div class="title">标题 ({{total}})</div>
                             <div class="no">编号</div>
@@ -84,7 +84,7 @@
                     <span class="input-group-text">Part of Standard Release</span>
                     <input type="text" class="form-control" ng-model="info.part_of_release" placeholder="所属版本">
                 </div>
-                <div id="intro_editor">{{editor_placeholder}}</div>
+                <div id="intro_editor">{{tips.intro}}</div>
                 <div class="row mt-3">
                     <div class="col">
                         <div class="id_info" ng-show="info.id">Document ID: {{info.id}}</div>
