--- a/websites/autosar/view/standard.html
+++ b/websites/autosar/view/standard.html
@@ -21,7 +21,84 @@
 <body ng-app="indexApp">
     <div ng-include="'/view/header.html'"></div>
     <div id="wrapper" class="container-fluid" ng-controller="indexCtrl">
+        <div class="row">
+            <div class="col-8 mt-3">
+                <div class="row mb-2">
+                    <div class="col pe-0">
+                        <input type="text" class="form-control" ng-disabled="info.createdAt" ng-model="info.docid" placeholder="所属文档/Document ID">
+                    </div>
+                    <div class="col-4 pe-0">
+                        <input type="text" class="form-control" ng-disabled="info.createdAt" ng-model="info.id" placeholder="标识/Identification">
+                    </div>
+                    <div class="col pe-0">
+                        <input type="text" class="form-control" ng-model="info.type" placeholder="类型/Type">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" ng-model="info.reference" placeholder="支持材料/Supporting Material">
+                    </div>
 
+                </div>
+                <div class="row mb-2">
+                    <div class="col pe-0">
+                        <input type="text" class="form-control" ng-model="info.applies_to" placeholder="应用于/Applies to">
+                    </div>
+                    <div class="col-9">
+                        <input type="text" class="form-control" ng-model="info.dependencies" placeholder="依赖/Dependencies，比如：RS_Main_00140, RS_Main_00141">
+                    </div>
+                </div>
+
+                <div class="standard_item title mb-2">{{tips.title}}</div>
+                <div class="standard_item description mb-2">{{tips.description}}</div>
+                <div class="standard_item rationale mb-2">{{tips.rationale}}</div>
+                <div class="standard_item usecase">{{tips.usecase}}</div>
+            </div>
+            <div class="col">
+                <div class="row mt-3">
+                    <div class="col standard_list p-1 me-2">
+                        <div class="me-2" ng-repeat="x in stdlist" ng-click="edit(x.id)">{{x.id}}</div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col">
+                        <div class="id_info">Total:{{total}}</div>
+                    </div>
+                    <div class="col-8">
+                        <input type="text" class="form-control" ng-model="opts.id" placeholder="搜索标识">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-2"></div>
+                    <div class="col d-grid gap-2 pe-0">
+                        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteWnd" ng-show="info.createdAt">Delete</button>
+                    </div>
+                    <div class="col d-grid gap-2 pe-0">
+                        <button type="button" class="btn btn-outline-warning" ng-click="reset()">Reset</button>
+                    </div>
+                    <div class="col-5 d-grid gap-2">
+                        <button type="button" class="btn btn-outline-success" ng-click="submit()">Submit Information</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 删除确认窗口 -->
+        <div id="deleteWnd" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title font-weight-bold font-italic">文档删除确认</h5>
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    </div>
+                    <div class="modal-body">
+                        该操作将删除文档信息，确认删除吗？
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal" ng-click="delete(info.id);">删除</button>
+                        <button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">取消</button>                
+                    </div>
+                </div>
+            </div>
+        </div>
     </div> <!-- wrappwer -->
 
 </body>
