--- a/websites/autosar/view/document.html
+++ b/websites/autosar/view/document.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script> 
+    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
     <!-- font-awesome -->
     <link  href="/bower_components/font-awsome/css/font-awesome.css" rel="stylesheet" />
     <!-- Bootstrap -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript"></script>
-    <!-- jquery-notebook -->
-    <link href="/bower_components/jquery-notebook/src/js/jquery.notebook.css" rel="stylesheet" type="text/css" />
-    <script src="/bower_components/jquery-notebook/src/js/jquery.notebook.js" type="text/javascript"></script>
+    <!-- Trumbowyg -->
+    <link href="/bower_components/trumbowyg/dist/ui/trumbowyg.min.css" rel="stylesheet">
+    <script src="/bower_components/trumbowyg/dist/trumbowyg.min.js" type="text/javascript"></script>
 
     <!-- 自定义 -->   
     <title>AUTOSAR Documents</title>
@@ -24,47 +24,37 @@
         <div class="row">
             <div class="col-7 mt-3">
                 <div class="row">
-                    <div class="col document_list">
-                        <div class="header">
-                            <div class="title">标题 ({{total}})</div>
-                            <div class="no">编号</div>
-                            <div class="status">状态</div>
-                            <div class="part_of_standard">所属部分</div>
-                            <div class="part_of_release">版本</div>
-                        </div>
-                        <div class="item" ng-repeat="x in doclist" ng-click="edit(x.id)">
-                            <div class="title">{{x.title}}</div>
-                            <div class="no">{{x.identification_no}}</div>
-                            <div class="status">{{x.status}}</div>
-                            <div class="part_of_standard">{{x.part_of_standard}}</div>
-                            <div class="part_of_release">{{x.part_of_release}}</div>
-                        </div>
+                    <div class="col pe-0">
+                        <input type="text" class="form-control" ng-model="opts.title" placeholder="标题">
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col input-group mb-3">
-                        <span class="input-group-text">标题</span>
-                        <input type="text" class="form-control" ng-model="opts.title">
+                    <div class="col-1 pe-0">
+                        <input type="text" class="form-control" ng-model="opts.identification_no" placeholder="编号">
                     </div>
-                    <div class="col input-group mb-3">
-                        <span class="input-group-text">编号</span>
-                        <input type="text" class="form-control" style="width: 30px;" ng-model="opts.identification_no">
-                        <span class="input-group-text">状态</span>
+                    <div class="col-1 pe-0">
                         <select class="form-select" ng-model="opts.status">
                             <option value="">请选择..</option>
                             <option ng-repeat="x in supported_status" value="{{x}}">{{x}}</option>
                         </select>
-                        <span class="input-group-text">部分</span>
+                    </div>
+                    <div class="col-1 pe-0">
                         <select class="form-select" ng-model="opts.part_of_standard">
                             <option value="">请选择..</option>
                             <option ng-repeat="x in supported_part_of_standard" value="{{x}}">{{x}}</option>
                         </select>
-                        <span class="input-group-text">版本</span>
+                    </div>
+                    <div class="col-1">
                         <select class="form-select" ng-model="opts.part_of_release">
                             <option value="">请选择..</option>
                             <option ng-repeat="x in supported_part_of_release" value="{{x}}">{{x}}</option>
                         </select>
                     </div>
+                </div>
+                <div class="row document_list px-2" ng-repeat="x in doclist" ng-click="edit(x.id)">
+                    <div class="col">{{x.title}}</div>
+                    <div class="col-1 pe-0">{{x.identification_no}}</div>
+                    <div class="col-1 pe-0">{{x.status}}</div>
+                    <div class="col-1 pe-0">{{x.part_of_standard}}</div>
+                    <div class="col-1">{{x.part_of_release}}</div>
                 </div>
             </div>
             <div class="col mt-3">
@@ -84,7 +74,7 @@
                     <span class="input-group-text">Part of Standard Release</span>
                     <input type="text" class="form-control" ng-model="info.part_of_release" placeholder="所属版本">
                 </div>
-                <div id="intro_editor">{{tips.intro}}</div>
+                <div class="intro" placeholder="简介/Introduce"></div>
                 <div class="row mt-3">
                     <div class="col">
                         <div class="id_info" ng-show="info.id">Document ID: {{info.id}}</div>
