--- a/websites/autosar/view/glossary.html
+++ b/websites/autosar/view/glossary.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script> 
+    <script src="/bower_components/jquery.min.js" type="text/javascript"></script> 
     <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
     <!-- font-awesome -->
     <link  href="/bower_components/font-awsome/css/font-awesome.css" rel="stylesheet" />
@@ -28,7 +28,7 @@
                         <input type="text" class="form-control" ng-model="info.term" placeholder="词汇/Glossary">
                     </div>
                 </div>
-                <div class="row mb-2">
+                <div class="row mb-3">
                     <div class="col pe-0">
                         <input type="text" class="form-control" ng-model="info.initiator" placeholder="发起者/Initiator">
                     </div>
@@ -39,10 +39,10 @@
                         <input type="text" class="form-control" ng-model="info.docid" placeholder="所属文档/Document ID">
                     </div>
                 </div>
-                <div class="glossary_item definition mb-2">{{tips.definition}}</div>
-                <div class="glossary_item further_explanation mb-2">{{tips.further_explanation}}</div>
-                <div class="glossary_item comment mb-2">{{tips.comment}}</div>
-                <div class="glossary_item example">{{tips.example}}</div>
+                <div class="glossary_item definition mb-2"></div>
+                <div class="glossary_item further_explanation mb-2"></div>
+                <div class="glossary_item comment mb-2"></div>
+                <div class="glossary_item example"></div>
             </div>
             <div class="col">
                 <div class="row mt-3">
