--- a/websites/autosar/view/css/all.css
+++ b/websites/autosar/view/css/all.css
@@ -1,18 +1,21 @@
+/* trumbowyg */
+.trumbowyg-box,.trumbowyg-editor { min-height: 90px;}
+
 .key_info { line-height: 30px; font-weight: bold; font-style: italic; }
 
-
 /* document */
+.intro { height: 400px; padding: 5px; }
 .document_list>div { height: 25px; margin-top: 5px; border-bottom: 1px dashed #cccccc; }
 .document_list>div:not(:first-child) { text-align: center; }
 
 /* glossary */
-.glossary_item { padding: 5px; border: 1px dashed #888888; border-radius: 5px; }
+.glossary_item { padding: 5px; }
+.definition { height: 100px; }
 .glossary_list { height: 545px; border: 1px dashed #888888; border-radius: 5px; }
 .glossary_list>div { display: inline; float: left; padding: 0px 5px; border-bottom: 1px solid #cccccc; cursor: pointer; }
 
 /* standard */
-.standard_item { height: 100px; padding: 5px; border: 1px dashed #888888; border-radius: 5px; }
-.description { height: 250px; }
-
+.standard_item { padding: 5px; }
+.description { height: 110px; }
 .standard_list { height: 545px; border: 1px dashed #888888; border-radius: 5px; }
 .standard_list>div { display: inline; float: left; padding: 0px 5px; border-bottom: 1px solid #cccccc; cursor: pointer; }
