--- a/websites/autosar/view/glossary.html
+++ b/websites/autosar/view/glossary.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="/bower_components/jquery.min.js" type="text/javascript"></script> 
+    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="/bower_components/angular/angular.min.js" type="text/javascript"></script>
     <!-- font-awesome -->
     <link  href="/bower_components/font-awsome/css/font-awesome.css" rel="stylesheet" />
     <!-- Bootstrap -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript"></script>
-    <!-- jquery-notebook -->
-    <link href="/bower_components/jquery-notebook/src/js/jquery.notebook.css" rel="stylesheet" type="text/css" />
-    <script src="/bower_components/jquery-notebook/src/js/jquery.notebook.js" type="text/javascript"></script>
+    <!-- Trumbowyg -->
+    <link href="/bower_components/trumbowyg/dist/ui/trumbowyg.min.css" rel="stylesheet">
+    <script src="/bower_components/trumbowyg/dist/trumbowyg.min.js" type="text/javascript"></script>
 
     <!-- 自定义 -->   
     <title>AUTOSAR Glossary</title>
@@ -39,10 +39,10 @@
                         <input type="text" class="form-control" ng-model="info.docid" placeholder="所属文档/Document ID">
                     </div>
                 </div>
-                <div class="glossary_item definition mb-2"></div>
-                <div class="glossary_item further_explanation mb-2"></div>
-                <div class="glossary_item comment mb-2"></div>
-                <div class="glossary_item example"></div>
+                <div class="glossary_item definition mb-2" placeholder="定义/Definition"></div>
+                <div class="glossary_item further_explanation mb-2" placeholder="进一步解释/Further Explanation"></div>
+                <div class="glossary_item comment mb-2" placeholder="注释/Comment"></div>
+                <div class="glossary_item example" placeholder="示例/Example"></div>
             </div>
             <div class="col">
                 <div class="row mt-3">
