--- a/websites/autosar/view/standard.html
+++ b/websites/autosar/view/standard.html
@@ -8,9 +8,9 @@
     <link  href="/bower_components/font-awsome/css/font-awesome.css" rel="stylesheet" />
     <!-- Bootstrap -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.bundle.js" type="text/javascript"></script>
-    <!-- jquery-notebook -->
-    <link href="/bower_components/jquery-notebook/src/js/jquery.notebook.css" rel="stylesheet" type="text/css" />
-    <script src="/bower_components/jquery-notebook/src/js/jquery.notebook.js" type="text/javascript"></script>
+    <!-- Trumbowyg -->
+    <link href="/bower_components/trumbowyg/dist/ui/trumbowyg.min.css" rel="stylesheet">
+    <script src="/bower_components/trumbowyg/dist/trumbowyg.min.js" type="text/javascript"></script>
 
     <!-- 自定义 -->   
     <title>AUTOSAR Standards</title>
@@ -34,7 +34,7 @@
                         <input type="text" class="form-control" ng-model="info.type" placeholder="类型/Type">
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" ng-model="info.reference" placeholder="支持材料/Supporting Material">
+                        <input type="text" class="form-control" ng-model="info.supporting_material" placeholder="支持材料/Supporting Material">
                     </div>
 
                 </div>
@@ -47,10 +47,10 @@
                     </div>
                 </div>
 
-                <div class="standard_item title mb-2">{{tips.title}}</div>
-                <div class="standard_item description mb-2">{{tips.description}}</div>
-                <div class="standard_item rationale mb-2">{{tips.rationale}}</div>
-                <div class="standard_item usecase">{{tips.usecase}}</div>
+                <div class="standard_item title mb-2" placeholder="标题/Title"></div>
+                <div class="standard_item description mb-2" placeholder="描述/Description"></div>
+                <div class="standard_item rationale mb-2" placeholder="工作原理/Rationale"></div>
+                <div class="standard_item usecase" placeholder="用例/Use Case"></div>
             </div>
             <div class="col">
                 <div class="row mt-3">
