--- a/websites/autosar/view/css/all.css
+++ b/websites/autosar/view/css/all.css
@@ -8,14 +8,29 @@
 .document_list>div { height: 25px; margin-top: 5px; border-bottom: 1px dashed #cccccc; }
 .document_list>div:not(:first-child) { text-align: center; }
 
+
+.alist>a { line-height: 25px; margin-right: 10px; }
+.alist>a:nth-child(odd):link { color:LightSlateGray; }
+.alist>a:nth-child(odd):hover { color:red; }
+
 /* glossary */
 .glossary_item { padding: 5px; }
 .definition { height: 100px; }
 .glossary_list { height: 545px; border: 1px dashed #888888; border-radius: 5px; }
-.glossary_list>div { display: inline; float: left; padding: 0px 5px; border-bottom: 1px solid #cccccc; cursor: pointer; }
+
+/* glossary display */
+.glossary_display { position: fixed; border: 1px dashed #cccccc; border-radius: 5px; padding: 5px; background-color: #eeeeee; opacity: 0.97; }
+.glossary_group { display: inline; float: left; width: calc(33% - 10px); min-height: 100px; border: 1px dashed #888888; 
+    border-radius: 5px; padding: 5px; margin:10px 10px 0px 0px; }
+.glossary_group>div { border-bottom: 1px solid #cccccc; font-weight: bold; }
+
+.gd_line { line-height: 30px; border-bottom: 1px dashed #cccccc; }
+.gd_title { font-style: italic; color: #888888; }
+.gd_item { font-weight: bold; margin-left: 5px; margin-right: 10px; }
+.gd_html { margin-top: 5px; color: #0B3861; }
 
 /* standard */
 .standard_item { padding: 5px; }
 .description { height: 110px; }
 .standard_list { height: 545px; border: 1px dashed #888888; border-radius: 5px; }
-.standard_list>div { display: inline; float: left; padding: 0px 5px; border-bottom: 1px solid #cccccc; cursor: pointer; }
+
