add part of standard display

--- a/framework/view/header.html
+++ b/framework/view/header.html
@@ -33,7 +33,8 @@ const menu_data = [
         {'name':'Requirement', 'url':'/software_engineering/view/requirement.html'},
     ]},
     {'name':'AUTOSAR', 'url':'/autosar', 'children':[
-        {'name':'Standard', 'url':'/autosar/view/standard.html'},
+        {'name':'Standard Display', 'url':'/autosar/standard/display'},
+        {'name':'Standard', 'url':'/autosar/standard'},
         {'name':'Glossary Display', 'url':'/autosar/glossary/display'},
         {'name':'Glossary', 'url':'/autosar/glossary'},
         {'name':'Documents', 'url':'/autosar/document'},
